# MetaRLGym

./: .env.example  .gitignore  README.md  README_multistep.md  pyproject.toml  requirements.txt  test_textarena_env.py  test_textarena_grpo_integration.py
.cursor/plan/: env_info.md  env_update.md  mask_env.md  policy.md  refactor_env.md  ta.md  trainer_update.md  trial.md
.cursor/rules/: grpo-multistep-agent-usage.mdc  makecursorrule.mdc  metarlgym-imports.mdc
agentsgym/: README.md  __init__.py
agentsgym/agents/: README.md  __init__.py  base.py
agentsgym/envs/: __init__.py  environment.py  multistep_env.py
agentsgym/eval/: README.md
agentsgym/prompts/: few_shots.py  templates.py
agentsgym/rubrics/: code_rubric.py  math_rubric.py  rubric.py  tool_rubric.py
agentsgym/trainers/: __init__.py  dpo_sft_env_trainer.py  dpo_sft_trainer.py  grpo_env_trainer.py  grpo_trainer.py  online_dpo_env_trainer.py  online_dpo_trainer.py  vllm_client.py
agentsgym/utils/: logging_utils.py
docs/source/: main.md
examples/: calculator_evaluation.py  calculator_training.py  gsm8k_simple.py  multistep_example.py  newtextarena_training.py  textarena_training.py  twenty.ipynb  twenty_questions.py
metarlgym/: README.md  __init__.py
metarlgym/agents/: README.md  __init__.py  base.py
metarlgym/curriculum/: README.md
metarlgym/envs/: README.md  __init__.py  environment.py  math_env.py  multistep_env.py  onestep.py  simple_env.py  textarena_env.py  textarena_multistep_env.py  tool_env.py
metarlgym/eval/: README.md
metarlgym/examples/: gsm8k_simple.py  newtextarena_training.py  textarena_training.py
metarlgym/prompts/: few_shots.py
metarlgym/rubrics/: code_rubric.py  math_rubric.py  rubric.py  tool_rubric.py
metarlgym/trainers/: grpo_env_trainer.py  online_dpo_env_trainer.py  (+1 more)
tests/: test_minimal_grpo.py  test_multistep_env.py  test_textarena.py  test_textarena_env.py  test_textarena_multistep_env.py  test_twentyquestions_env.py
(+19 files in other folders)
