[project]
name = "Agentsgym"
authors = [
    {name = "Andrew Siah", email = "andrew.siah@columbia.edu"},
]
version = "0.1.0"
description = "Learning to Learn with Agents for LLMs"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.6.0",
    "setuptools",
    "deepspeed",
    "accelerate",
    "peft",
    "wandb",
    "rich",
    "duckduckgo-search",
    "trl==0.17.0",
    "liger-kernel",
    "vllm==0.8.5",
    "brave-search",
    "textarena>=0.6.1",
    "python-dotenv>=1.1.0",
    "gpustat>=1.1.1",
    "ipykernel>=6.29.5",
    "opencv-python-headless==4.11.0.86",
]

[tool.setuptools]
packages = ["agentsgym"]
